# apollo-r1.0.0

modules/common/: apollo_app.cc  apollo_app.h
modules/common/adapters/: adapter.h  adapter_gflags.cc  adapter_manager.cc  adapter_manager.h  message_adapters.h
modules/common/proto/: geometry.proto  header.proto
modules/dreamview/backend/: server.cc  simulation_world_service.cc  simulation_world_service.h  trajectory_point_collector.h  websocket.cc  websocket.h
modules/drivers/gnss/: CMakeLists.txt  nodelets.xml  package.xml
modules/drivers/gnss/include/gnss/: custom_messages.h  parser.h
modules/drivers/gnss/proto/: config.proto
modules/drivers/gnss/scripts/: start_gnss_driver.sh
modules/drivers/gnss/src/: data_parser.cpp  parser_nodelet.cpp
modules/drivers/gnss/src/impl/: custom_parser.cpp
modules/hmi/utils/: restful_client.cc  restful_client.h
modules/localization/: localization.cc
modules/localization/proto/: localization.proto  pose.proto
modules/localization/rtk/: rtk_localization.cc
