<?xml version="1.0"?>
<package>
  <name>gnss_driver</name>
  <version>1.0.0</version>
  <description>The GNSS driver package</description>

  <maintainer email="info@apollo.auto">Apollo Authors</maintainer>

  <license>Licensed under the Apache License, Version 2.0 </license>


  <buildtool_depend>catkin</buildtool_depend>   <!-- catkin 是 ros 的编译工具 -->
  <build_depend>nodelet</build_depend> <!-- ros nodelet包旨在提供一种在同一进程中运行多个算法的方法，算法之间的复制传输为零。 -->
  <build_depend>roscpp</build_depend> <!-- roscpp是ROS的C ++实现。它提供了一个客户端库，使C ++程序员能够快速与ROS 主题， 服务和参数进行交互。 -->
  <build_depend>std_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
